--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+certifi==2017.4.17
+chardet==3.0.4
 falcon==1.2.0
 gunicorn==19.7.1
+idna==2.5
 python-mimeparse==1.6.0
+requests==2.18.1
 six==1.10.0
+urllib3==1.21.1
