--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,18 @@ ENV/
 
 # project
 apisrc
+
+# Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
