--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+addict==2.1.1
 certifi==2017.4.17
 chardet==3.0.4
 falcon==1.2.0
+futures==3.1.1
 gunicorn==19.7.1
 idna==2.5
 python-mimeparse==1.6.0
